fixed search result text not align properly

--- a/src/index.css
+++ b/src/index.css
@@ -107,7 +107,7 @@
     @apply flex gap-[1rem] md:gap-[1.5rem] justify-items-center;
   }
   .search-results {
-    @apply text-white px-[1rem] md:px-[25px] xl:px-[2.25rem] text-specific_search-results md:text-heading-l;
+    @apply text-white text-specific_search-results md:text-heading-l py-6 md:pt-[2.06rem] xl:pt-[2.13rem] xl:pb-[2.38rem];
   }
   .signup--button {
     @apply md:ml-[2rem] bg-red text-white rounded-[0.375rem]  mb-[1.5rem] md:w-[21rem] w-[17.4rem] h-[3rem] hover:bg-white/90 hover:text-black transition font-outfit ml-[1.5rem];
@@ -163,7 +163,7 @@
   }
 
   .screen-spacing {
-    @apply ml-4 md:ml-[1.56rem] mt-[1.5rem] md:mt-[1.56rem] xl:pl-[10.25rem] xl:pt-16 pb-[2.37rem] md:pb-[3.5rem] xl:pb-[3.25rem];
+    @apply ml-4 md:ml-[1.56rem] mt-[1.5rem] md:mt-[1.56rem] xl:mt-0 xl:pl-[10.25rem] xl:pt-16 pb-[2.37rem] md:pb-[3.5rem] xl:pb-[3.25rem];
   }
 
   .trending--heading--text {
